[package]
name = "reth_gnosis"
version = "1.0.2"
edition = "2021"

[lib]
name = "reth_gnosis"
path = "src/lib.rs"

[[bin]]
name = "reth"
path = "src/main.rs"

[dependencies]
gnosis-primitives = { git = "https://github.com/gnosischain/gnosis-stuff.git", tag = "v0.1.111" }

reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-etl = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-era = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-era-downloader = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-era-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", features = [
    "test-utils",
] }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-config = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }

eyre = "0.6"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", default-features = false, features = ["full"] }

# revm
revm = { version = "34.0.0", features = ["std"], default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
revm-primitives = { version = "22.0.0", features = [
    "std",
], default-features = false }
revm-inspectors = "0.34.2"

futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
serde_with = "3"
hex = "0.4.3"
walkdir = "2.3.3"
thiserror = { version = "2.0.0", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }

# eth
alloy-chains = { version = "0.2.5", default-features = false }
alloy-dyn-abi = "1.5.6"
alloy-evm = { version = "0.27.2", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false }
alloy-sol-macro = "1.5.0"
alloy-sol-types = "1.5.6"

alloy-rlp = { version = "0.3.13", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }

alloy-consensus = { version = "1.6.3", default-features = false }
alloy-eips = { version = "1.6.3", default-features = false }
alloy-genesis = { version = "1.6.3", default-features = false }
alloy-network = { version = "1.6.3", default-features = false }
alloy-rpc-types-eth = { version = "1.6.3", default-features = false }
alloy-serde = { version = "1.6.3", default-features = false }

rayon = "1.7"

tracing = "0.1.0"
reqwest = "0.12"
tokio = "1.44.2"
anyhow = "1.0"
indicatif = "0.17"
zstd = "0.13"
blake3 = "1.8"

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
testing = []
failing-tests = []
serde = []
