[package]
name = "reth_gnosis"
version = "1.0.3"
edition = "2021"

[lib]
name = "reth_gnosis"
path = "src/lib.rs"

[[bin]]
name = "reth"
path = "src/main.rs"

[dependencies]
gnosis-primitives = { git = "https://github.com/gnosischain/rust-primitives.git", tag = "v0.2.1" }

reth = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-etl = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-era = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-era-downloader = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-era-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", features = [
    "test-utils",
] }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }

# reth independent crates
reth-primitives-traits = { version = "0.3.0", default-features = false }

eyre = "0.6"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", default-features = false, features = ["full"] }

# revm
revm = { version = "38.0.0", features = ["std", "optional_no_base_fee", "optional_block_gas_limit"], default-features = false }
revm-database = { version = "13.0.0", default-features = false }
revm-state = { version = "11.0.0", default-features = false }
revm-primitives = { version = "23.0.0", features = [
    "std",
], default-features = false }
revm-inspectors = "0.39.0"

futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
serde_with = "3"
hex = "0.4.3"
walkdir = "2.3.3"
thiserror = { version = "2.0.0", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }

# eth
alloy-chains = { version = "0.2.33", default-features = false }
alloy-dyn-abi = "1.5.6"
alloy-evm = { version = "0.33.0", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false }
alloy-sol-macro = "1.5.0"
alloy-sol-types = "1.5.6"

alloy-rlp = { version = "0.3.13", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }

alloy-consensus = { version = "2.0.0", default-features = false }
alloy-eips = { version = "2.0.0", default-features = false }
alloy-genesis = { version = "2.0.0", default-features = false }
alloy-network = { version = "2.0.0", default-features = false }
alloy-rpc-types-eth = { version = "2.0.0", default-features = false }
alloy-serde = { version = "2.0.0", default-features = false }

rayon = "1.7"

tracing = "0.1.0"
reqwest = "0.13"
tokio = "1.51.1"
anyhow = "1.0"
indicatif = "0.17"
zstd = "0.13"
blake3 = "1.8"

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
testing = []
failing-tests = []
serde = []
